<resources>
    <string name="app_name">eva01</string>
    <string name="cantidad_suministrada">Cantidad Suministrada</string>
    <string name="fecha">Fecha</string>
    <string name="_500_miligramos">500 miligramos</string>
    <string name="_00_17_27_06_2077">00:17 27/06/2077</string>
    <string name="_12_17_26_06_2077">12:17 26/06/2077</string>
    <string name="_12_17_24_06_2077">12:17 24/06/2077</string>
    <string name="_00_17_24_06_2077">00:17 24/06/2077</string>
    <string name="_12_17_25_06_2077">12:17 25/06/2077</string>
    <string name="_00_17_25_06_2077">00:17 25/06/2077</string>
    <string name="guardar">Guardar</string>
    <string name="numero_de_telefono">Numero de Telefono</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="raciones_de_alimento">Raciones de Alimento</string>
    <string name="_500mg_12_17">500mg 12:17</string>
    <string name="_500mg_00_17">500mg 00:17</string>
    <string name="men_principal">Menú Principal</string>
    <string name="gestionar_temporizadores">Gestionar Temporizadores</string>
    <string name="ver_estadisticas">Ver Estadisticas</string>
    <string name="configuraci_n">Configuración</string>
    <string name="ver_cuenta">Ver Cuenta</string>
    <string name="gestionar_dispositivos_conectados">Gestionar Dispositivos Conectados</string>
    <string name="editar_temporizadores">Editar Temporizadores</string>
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="no_tienes_una_cuenta_crea_una_nueva">¿No tienes una cuenta? Crea una nueva</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="contrase_a">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="inisiosesion">Iniciar Sesión</string>
    <string name="volver">Volver</string>
    <string name="foto_de_perfil">foto de perfil</string>
    <string name="tu_cuenta">Tu cuenta</string>
    <string name="tu_nombre_de_usuario">Tu nombre de usuario</string>
    <string name="tu_n_mero_de_tel_fono">Tu número de teléfono</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="crea_las_raciones_a_usar">Crea las raciones a usar</string>
    <string name="crear_raciones">Crear raciones</string>
    <string name="creaci_n_de_raciones">Creación de raciones</string>
    <string name="tiempo_de_raci_n">Tiempo de ración</string>
    <string name="nombre_de_la_raci_n">Nombre de la ración</string>
    <string name="descripci_n_de_la_raci_n">Descripción de la ración</string>
    <string name="guardar_raci_n">Guardar ración</string>
    <string name="ver_raciones">Ver raciones</string>
    <string name="lista_de_raciones">Lista de raciones</string>
    <string name="inicio_de_sesion">Inicio de sesion</string>
</resources>