<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men_principal"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonTemporizer"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/gestionar_temporizadores"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/gris"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStats"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ver_estadisticas"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/gris"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonProfile"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/ver_cuenta"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/gris"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cerrar_sesi_n"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:backgroundTint="@color/gris"
            app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.None" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
